--- a/MyApp/MyApp.csproj
+++ b/MyApp/MyApp.csproj
@@ -1,16 +1,30 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <!-- 2.1 Ver. -->
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" /> 
+    <!-- 2.0 Ver.
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    --> 
   </ItemGroup>
 
   <ItemGroup>
     <None Include="wwwroot\images\main.jpg" />
+    <!-- 2.0 Ver.
+    <Folder Include="wwwroot\" />
+    -->
   </ItemGroup>
 
+  <!-- 2.0 Ver.Command-line Tool 설치
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.Dotnet" Version="2.1.1" />
+  </ItemGroup>
+  -->
+  <!-- 2.1 Ver.의 경우 이미 설치되어 있음 -->
+  
 </Project>
